# crossword-help

./: .coverage  .gitattributes  .gitignore  README.md  pyproject.toml
crosshelp/: clue.py  patterns.py  synonyms.py  web.py
crosshelp/static/: app.js  styles.css
crosshelp/templates/: index.html
evals/: run_eval.py
evals/data/: clues.csv
evals/results/: eval-20260612-001709.json  eval-20260612-005434.json
tests/: test_clue.py  test_patterns.py  test_web.py
