[project]
name = "crosshelp"
version = "0.1.0"
description = "A crossword helper CLI with pattern matching, anagrams, and word lookups"
requires-python = ">=3.9"
dependencies = ["click", "rich", "requests", "anthropic", "flask", "flask-cors"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
crosshelp = ["data/*.txt"]